[package]
name = "hashchecker"
version = "0.1.0"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
faster-hex = "0.4.1"
futures = "0.3.5"
reqwest = "0.10.8"
sha-1 = "0.9.1"
termcolor = "1.1.0"
xml-rs = "0.8.3"

[dependencies.tokio]
version = "0.2.22"
features = ["rt-threaded", "macros", "fs"]
