[package]
name = "renamer"
version = "0.1.0"
authors = ["Samuel Grenier <samrg472@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
rru-common = { path = "../common" }
reqwest = "0.10.8"
termcolor = "1.1.0"

[dependencies.tokio]
version = "0.2.22"
features = ["rt-threaded", "macros", "fs"]
